[package]
name = "bincode-sled"
description = "Sled with types instead of bytes. Powered by bincode-v2"
version = "0.0.3"
edition = "2021"
license = "MIT"
# repository = "https://github.com/chronicl/typed-sled"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34"
bincode = {version = "2.0.0-rc"}
pin-project = "1"
thiserror = "1"
tantivy = {version = "0.19", optional = true}
chrono = {version = "0.4", features = ["serde"], optional = true}

[[example]]
name = "key_generating"
required-features = ["key-generating"]

[[example]]
name = "basic_search"
required-features = ["key-generating", "search"]

[[example]]
name = "advanced_search"
required-features = ["key-generating", "search", "chrono"]

[features]
key-generating = []
convert = []
search = ["tantivy"]
